tests/ui/rfcs/rfc-1623-static/rfc1623-2.stderr
error: higher-ranked subtype error
  --> $DIR/rfc1623-2.rs:28:8
   |
LL |     f: &id,
   |        ^^^

error: higher-ranked subtype error
  --> $DIR/rfc1623-2.rs:28:8
   |
LL |     f: &id,
   |        ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked subtype error
  --> $DIR/rfc1623-2.rs:28:8
   |
LL |     f: &id,
   |        ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked subtype error
  --> $DIR/rfc1623-2.rs:28:8
   |
LL |     f: &id,
   |        ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

